using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
	internal static string isMoving = "isMoving";
	internal static string isDashing = "isDashing";
	internal static string isGrounded = "isGrounded";
	internal static string yVelocity = "yVelocity";
	internal static string jumpTrigger = "jump";
	internal static string isDoubleJump = "isDoubleJump";
	internal static string isOnWall = "isOnWall";
	internal static string isOnCeilling = "isOnCeilling";
	internal static string hasTarget = "hasTarget";
	internal static string canMove = "canMove";
	internal static string isAlive = "isAlive";
	internal static string isHit = "isHit";
	internal static string hitTrigger = "hit";
	internal static string lockVelocity = "lockVelocity";
	internal static string attackCooldown = "attackCooldown";
	internal static string rangedAttackTrigger = "rangedAttack";
	internal static string isClimbing = "isClimbing";
}
